[gd_scene load_steps=9 format=3 uid="uid://c8nwu4mwix02w"]

[ext_resource type="Script" path="res://main.gd" id="1_3hp8v"]
[ext_resource type="PackedScene" uid="uid://chxff3xxo7qn2" path="res://player.tscn" id="1_kglwf"]
[ext_resource type="PackedScene" uid="uid://cypyv08he7eys" path="res://scrap_treasure.tscn" id="2_vycq8"]
[ext_resource type="PackedScene" uid="uid://cpky4ajurmwss" path="res://location_sprites.tscn" id="3_if4rs"]
[ext_resource type="PackedScene" uid="uid://dkgn3ys5nt1ao" path="res://item_collector.tscn" id="4_q373p"]
[ext_resource type="PackedScene" uid="uid://3pke8c3v8xbd" path="res://hud.tscn" id="5_h1go3"]
[ext_resource type="PackedScene" uid="uid://bgplxom4d71ao" path="res://walls.tscn" id="6_o4jhg"]
[ext_resource type="PackedScene" uid="uid://cbh7nw33q7mn7" path="res://item_creator.tscn" id="7_8vil2"]

[node name="Main" type="Node"]
script = ExtResource("1_3hp8v")
scrap_treasure = ExtResource("2_vycq8")
metadata/_edit_vertical_guides_ = [824.0, 1143.0, 964.0]
metadata/_edit_horizontal_guides_ = [325.0, 725.0, 517.0]

[node name="Location_Sprites" parent="." instance=ExtResource("3_if4rs")]

[node name="Player" parent="." instance=ExtResource("1_kglwf")]
position = Vector2(994, 660)

[node name="loot_spawn_timer" type="Timer" parent="."]
autostart = true

[node name="Start_Position" type="Marker2D" parent="."]
position = Vector2(800, 500)

[node name="Item_Collector" parent="." instance=ExtResource("4_q373p")]

[node name="HUD" parent="." instance=ExtResource("5_h1go3")]

[node name="Walls" parent="." instance=ExtResource("6_o4jhg")]

[node name="Item_creator" parent="." instance=ExtResource("7_8vil2")]

[connection signal="push" from="Player" to="." method="_on_player_push"]
[connection signal="timeout" from="loot_spawn_timer" to="." method="_spawn_loot"]
[connection signal="collect" from="Item_Collector" to="." method="_on_item_collector_collect"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
